# sqlite3-shell

./: .gitatributes  .replit  LICENSE  README.md  pyproject.toml  rm.sh  test.py
sqlite3_shell/: __init__.py  __main__.py  args.py  shell.py
sqlite3_shell/output/: __init__.py  blob_format.py  csv_output.py  html_output.py  json_output.py  stringify.py
sqlite_shell/output/: __init__.py
tests/: __init__.py  data.json  test-schema.sql  test.db  test_json.py  test_sqlite_shell.py
tests/html/: __init__.py  basic.html  blob.html  headers_pretty.html  test_html.py
tests/json/: __init__.py  basic.json  blob.json  headers_pretty.json  test_json.py
